# LFGit

./: 0_build.txt  build.gradle  build.gradle.kts  renovate.json  settings.gradle.kts
.github/workflows/: android.yml  debug_build.yml  fomatation.yaml  release.yml  wrapper-upgrade.yml
app/: build.gradle  build.gradle.kts
app/src/androidTest/java/com/lfgit/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/src/: CMakeLists.txt
app/src/main/java/com/lfgit/activities/: AddRepoActivity.java  AddRepoActivity.kt  BasicAbstractActivity.java  BasicAbstractActivity.kt  RepoListActivity.java  RepoListActivity.kt  RepoTasksActivity.java  RepoTasksActivity.kt  SettingsActivity.java  SettingsActivity.kt
app/src/main/java/com/lfgit/adapters/: RepoListAdapter.java  RepoTasksAdapter.java
app/src/main/java/com/lfgit/database/: RepoDao.java  RepoDao.kt  RepoDatabase.java  RepoDatabase.kt  RepoRepository.java
app/src/main/java/com/lfgit/executors/: BinaryExecutor.java  BinaryExecutor.kt  ExecListener.java  ExecListener.kt  GitExec.java  GitExecListener.java
app/src/main/java/com/lfgit/install/: InstallTask.kt  (+3 more)
app/src/main/res/layout/: activity_repo_list.xml  activity_repo_tasks.xml  checkout_dialog.xml  commit_dialog.xml  credentials_dialog.xml  fragment_install.xml  settings_activity.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: styles.xml  themes.xml
app/src/test/java/com/lfgit/: ExampleUnitTest.kt
gradle/: libs.versions.toml
tools/: clean.sh
(+52 files in other folders)
